debugging github security issue

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> wtf is this?  auto-fill?-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>Katherine White</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
